src/rabbit/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP  # rabbitmq service will have only internal IP address - accessible only within our cluster
  selector:
    app: rabbitmq
  ports:
    - name: http
      protocol: TCP
      port: 15672  # we need to create ingress for this port to access it from browser
      targetPort: 15672
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
